syntax = "proto3";

package courses;

service CourseService {
  rpc GetAllCourses (Empty) returns (CoursesResponse);
  rpc GetEnrolledCourses (EnrolledCoursesRequest) returns (CoursesResponse);
  rpc EnrollInCourse (EnrollRequest) returns (EnrollResponse);
  rpc DropCourse (DropRequest) returns (DropResponse);
  rpc DropStudent (DropStudentRequest) returns (DropResponse);
  rpc AddCourse (AddCourseRequest) returns (AddCourseResponse);
  rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseResponse);
  rpc GetCourseStudents (CourseStudentsRequest) returns (CourseStudentsResponse);
}

message Empty {}

message Course {
  int32 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  int32 availableSlots = 5;
}

message CoursesResponse {
  repeated Course courses = 1;
}

message EnrolledCoursesRequest {
  int32 userId = 1;
}

message EnrollRequest {
  int32 userId = 1;
  int32 courseId = 2;
}

message EnrollResponse {
  bool success = 1;
  string message = 2;
  int32 enrollmentId = 3;
}

message DropRequest {
  int32 userId = 1;
  int32 courseId = 2;
}

message DropStudentRequest {
  int32 studentId = 1;
  int32 courseId = 2;
  int32 facultyId = 3;
}

message DropResponse {
  bool success = 1;
  string message = 2;
}

message AddCourseRequest {
  string code = 1;
  string name = 2;
  string description = 3;
  int32 availableSlots = 4;
}

message AddCourseResponse {
  bool success = 1;
  string message = 2;
  int32 courseId = 3;
}

message DeleteCourseRequest {
  int32 courseId = 1;
}

message DeleteCourseResponse {
  bool success = 1;
  string message = 2;
}

message CourseStudentsRequest {
  int32 courseId = 1;
}

message StudentEnrollment {
  int32 userId = 1;
  string enrolledAt = 2;
}

message CourseStudentsResponse {
  repeated StudentEnrollment students = 1;
}